# bamboo

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  EVALUATION.md  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test_job.py  verify_installation.py
.github/workflows/: build-images.yml  docs.yml
bamboo/: __init__.py  cli.py  config.py
bamboo/agents/: __init__.py  context_enricher.py  context_prefetch.py  deps.py  email_drafter.py  exploration_planner.py  extra_source_explorer.py  internal_tools.py  investigation_session.py  knowledge_accumulator.py  knowledge_graph_extractor.py  knowledge_reviewer.py  orchestration.py  panda_doc_navigator.py  panda_source_navigator.py  prescription_composer.py  procedure_tools.py  reasoning_navigator.py  task_data_bootstrap.py  unstructured_knowledge_accumulator.py
bamboo/agents/extractors/: __init__.py  base.py  factory.py  knowledge_graph_extractor.py  llm_based_knowledge_extractor.py  panda_job_data_aggregator.py  panda_knowledge_extractor.py
bamboo/agents/helpers/: __init__.py  deps.py  internal_tools.py  procedure_tools.py  tool_dispatch.py  tool_selection.py
bamboo/data/: .env.example  __init__.py
bamboo/data/completions/: __init__.py  _bamboo  _bamboo.bash
bamboo/database/: __init__.py  base.py  factory.py  graph_database_client.py  vector_database_client.py
bamboo/database/backends/: __init__.py  neo4j_backend.py  qdrant_backend.py
bamboo/database/backends/examples/: __init__.py  in_memory_backend.py
bamboo/extractors/: __init__.py  base.py  factory.py  job_data_aggregator.py  knowledge_graph_extractor.py  llm_based_knowledge_extractor.py  panda_job_data_aggregator.py  panda_knowledge_extractor.py
bamboo/frontends/: __init__.py  base.py  cli.py  factory.py
bamboo/frontends/mattermost/: __init__.py  analyze.py  bot.py  capture.py  driver.py  io.py  narration.py  oidc.py  poster.py  render.py  serve.py
bamboo/llm/: __init__.py  llm_client.py  prompts.py
bamboo/mcp/: __init__.py  base.py  external_mcp_client.py  factory.py  interactive_mcp_client.py  panda_mcp_client.py  server_config.py
bamboo/mcp_tools/: __init__.py
bamboo/models/: graph_element.py  knowledge_entity.py
bamboo/scripts/: __init__.py  analyze_task.py  batch_analyze.py  batch_populate.py  eval_source_navigator.py  extract_knowledge.py  investigate.py  populate_knowledge.py  review_drafts.py  seed_drafts.py  serve_mattermost.py  test_source_navigator.py  verify.py
bamboo/scripts/panda/: eval_doc_navigator.py  eval_source_navigator.py  inspect_doc_index.py  inspect_log_comparison.py  test_doc_classification.py
bamboo/utils/: __init__.py  canonicalize.py  display.py  log_filters.py  logging.py  narrator.py  panda_client.py  prompts.py  sanitize.py
bamboo/workflows/: __init__.py  knowledge_workflow.py  reasoning_workflow.py
deploy/batch/: build-kb-snapshot.sh  run-analyze.sh  stage-model.sh  submit.sh
docs/: AGENTS.md  ANALYZE.md  BATCH.md  DEVELOPMENT.md  DOCUMENTATION_MAP.md  EXECUTION_TRUST.md  EXTRACTION_PLUGIN_SYSTEM.md  INVESTIGATE.md  KNOWLEDGE_POPULATION.md  MATTERMOST.md  PANDA_INTEGRATION.md  QUICKSTART.md  README.md  SCHEMA.md  SEEDING.md  index.md
docs/database-plugins/: DATABASE_PLUGINS.md  DATABASE_PLUGINS_EXAMPLES.md  DATABASE_PLUGINS_FINAL_CHECKLIST.md  DATABASE_PLUGINS_IMPLEMENTATION.md  DATABASE_PLUGINS_INDEX.md  DATABASE_PLUGINS_QUICK_REFERENCE.md  INDEX.md
docs/development/: DEVELOPMENT.md
docs/extraction-strategies/: EXTRACTION_PLUGIN_SYSTEM.md
docs/getting-started/: QUICKSTART.md
examples/: sample_email.txt  sample_external.json  sample_task.json
scripts/: tool_retrieval_recall_spike.py
tests/: __init__.py  conftest.py  test_batch_analyze.py  test_build_deps.py  test_completion.py  test_context_enricher.py  test_db_lazy_connect.py  test_execution_trust.py  test_extractors.py  test_filter_log.py  test_investigate_cli.py  test_investigation_session.py  test_logging.py  test_mattermost_analyze.py  test_mattermost_bot.py  test_mattermost_capture.py  test_mattermost_oidc.py  test_mattermost_poster.py  test_narration.py  test_panda_client.py  test_panda_credentials.py  test_panda_mcp_client.py  test_resolve_context_window.py  test_sanitize.py  test_tool_selection.py  test_verify_tls.py
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/openapi/: bamboo 2.yaml
website/src/components/: Head.astro
website/src/content/docs/: contributing.md  development.md  index.mdx  quickstart.md
website/src/content/docs/architecture/: agents.md  execution-trust.md  extending.md  extraction-plugin-system.md  schema.md
website/src/content/docs/database-plugins/: checklist.md  examples.md  implementation.md  index.md  quick-reference.md  reference.md  topic-index.md
website/src/content/docs/guides/: analyze.md  batch.md  investigate.md  knowledge-population.md
website/src/content/docs/integrations/: mattermost.md  panda-integration.md
website/src/styles/: custom.css
