[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bamboo"
version = "0.1.0"
description = "Bolstered Assistance for Managing and Building Operations and Oversight"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langchain-core",
    "langgraph>=0.0.38",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "neo4j>=5.16.0",
    "qdrant-client>=1.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.3",
    "email-validator>=2.1.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "panda-client-light>=1.6.11",
]

[project.optional-dependencies]
# External MCP servers via StreamableHTTP transport
external-mcp = [
    "mcp>=1.0.0",
]
# PanDA server source for code search (resource estimation analysis, error tracing).
# NOTE: panda-server currently installs with full server-side dependencies.
# This will be updated to a lightweight source-only package once one is available.
server-source = [
    "panda-server",
]
# Free local embeddings (sentence-transformers, no API key required)
local-embeddings = [
    "sentence-transformers>=2.7.0",
    "langchain-huggingface>=0.0.3",
]
# Free local LLM via Ollama (no API key required; install Ollama separately)
ollama = [
    "langchain-ollama>=0.1.0",
]
# Fully free setup: local LLM (Ollama) + local embeddings (sentence-transformers)
local = [
    "sentence-transformers>=2.7.0",
    "langchain-huggingface>=0.0.3",
    "langchain-ollama>=0.1.0",
]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.scripts]
bamboo = "bamboo.cli:cli"

[project.urls]
Homepage = "https://github.com/yourusername/bamboo"

[tool.setuptools.packages.find]
where = ["."]
include = ["bamboo*"]

[tool.setuptools.package-data]
"bamboo" = ["data/.env.example", "data/completions/_bamboo", "data/completions/_bamboo.bash"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

